# http_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  state.txt
src/: collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.h  state_serialization.h  tagged.h
tests/: model-tests.cpp  state-serialization-tests.cpp
